Mise en place du main et du about

--- a/index.html
+++ b/index.html
@@ -67,16 +67,40 @@
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home section" id="home">
+            <h1 class="home__title">Merry Christmas</h1>
 
+            <img src="asset/img/home-moon.png" alt="home image" class="home__moon">
+            <img src="asset/img/home-trineo-santa.png" alt="home image" class="home__trineo">
+            <img src="asset/img/home-mountain-3.png" alt="home image" class="home__mountain-3">
+            <img src="asset/img/home-mountain-2.png" alt="home image" class="home__mountain-2">
+            <img src="asset/img/home-pine-tree.png" alt="home image" class="home__pine">
+            <img src="asset/img/home-village.png" alt="home image" class="home__village">
+            <img src="asset/img/home-snow.png" alt="home image" class="home__snow">
+            <img src="asset/img/home-mountain-1.png" alt="home image" class="home__mountain-1">
         </section>
 
         <!--==================== ABOUT ====================-->
         <section class="about section" id="about">
+            <div class="about__container container grid">
+                <div class="about__data">
+                    <h2 class="section__title">About Sharing<br>Happiness</h2>
+                    <p class="about__description">
+                        Sharing these holidays is the bet gift you can give, give or share your loive with people you love the most and celebrtate with great happiness.
 
+                    </p>
+
+                    <a href="#" class="button">Share now</a>
+                </div>
+                <img src="asset/img/about-christmas.png" alt="about image" class="about__img">
+                <img src="asset/img/snow-img.png" alt="about image" class="about__snow-1">
+                <img src="asset/img/snow-img.png" alt="about image" class="about__snow-2">
+            </div>
         </section>
 
         <!--==================== SEND ====================-->
         <section class="send section" id="send">
+            
+
 
         </section>
 
