Ajout des fonctionnalités au scroll

--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
     <!--==================== MAIN ====================-->
     <main class="main">
         <!--==================== HOME ====================-->
-        <section class="home section" id="home">
+        <section class="home section" id="ID-Home">
             <h1 class="home__title">Merry Christmas</h1>
 
-            <img src="asset/img/home-moon.png" alt="home image" class="home__moon">
-            <img src="asset/img/home-trineo-santa.png" alt="home image" class="home__trineo">
-            <img src="asset/img/home-mountain-3.png" alt="home image" class="home__mountain-3">
-            <img src="asset/img/home-mountain-2.png" alt="home image" class="home__mountain-2">
-            <img src="asset/img/home-pine-tree.png" alt="home image" class="home__pine">
-            <img src="asset/img/home-village.png" alt="home image" class="home__village">
-            <img src="asset/img/home-snow.png" alt="home image" class="home__snow">
+            <img src="asset/img/home-moon.png" alt="home image" class="home__moon parallax" data-rellax-speed="-15">
+            <img src="asset/img/home-trineo-santa.png" alt="home image" class="home__trineo parallax" data-rellax-speed="-2">
+            <img src="asset/img/home-mountain-3.png" alt="home image" class="home__mountain-3 parallax" data-rellax-speed="-8">
+            <img src="asset/img/home-mountain-2.png" alt="home image" class="home__mountain-2 parallax" data-rellax-speed="-3">
+            <img src="asset/img/home-pine-tree.png" alt="home image" class="home__pine parallax" data-rellax-speed="-10">
+            <img src="asset/img/home-village.png" alt="home image" class="home__village parallax" data-rellax-speed="-10">
+            <img src="asset/img/home-snow.png" alt="home image" class="home__snow parallax">
             <img src="asset/img/home-mountain-1.png" alt="home image" class="home__mountain-1">
         </section>
 
@@ -98,7 +98,7 @@
         </section>
 
         <!--==================== SEND ====================-->
-        <section class="send section" id="Id-Send">
+        <section class="send section" id="ID-Send">
             
             <h2 class="section__title">Send Love This <br>Christmas</h2>
             <div class="send__container container grid">
@@ -137,7 +137,7 @@
         </section>
 
         <!--==================== CELEBRATE ====================-->
-        <section class="celebrate section" id="ID-celebrate">
+        <section class="celebrate section" id="ID-Celebrate">
             <div class="celebrate__container container grid">
                 <div class="celebrate__data">
                     <h2 class="section__title">Celebrate Wiith A <br>Lot of love</h2>
@@ -187,18 +187,18 @@
     </footer>
 
     <!--========== SCROLL UP ==========-->
-    <a href="#" class="scrollup" id="ID-Scrollup">
+    <a href="#ID-Home" class="scrollup" id="ID-Scrollup">
         <i class="ri-arrow-up-line"></i>
     </a>
 
     <!--=============== RELLAX JS ===============-->
-    <script src=""></script>
+    <script src="asset/js/rellax.min.js"></script>
 
     <!--=============== GSAP ===============-->
-    <script src=""></script>
+    <script src="asset/js/gsap.min.js"></script>
 
     <!--=============== SCROLLREVEAL ===============-->
-    <script src=""></script>
+    <script src="asset/js/scrollreveal.min.js"></script>
 
     <!--=============== MAIN JS ===============-->
     <script src="asset/js/script.js"></script>
