Ajout des preview

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     <i class="ri-close-line"></i>
                 </div>
 
-                <img src="/asset/img/snow-img.png" alt="nav image" class="nav__img-1">
-                <img src="/asset/img/snow-img.png" alt="nav image" class="nav__img-2">
+                <img src="asset/img/snow-img.png" alt="nav image" class="nav__img-1">
+                <img src="asset/img/snow-img.png" alt="nav image" class="nav__img-2">
             </div>
 
             <!-- Toggle button -->
@@ -177,12 +177,9 @@
                 </li>
             </ul>
 
-            <span class="footer__copy">
-                &#169; Coypright Bedmcode. All rights reserved
-            </span>
 
-            <img src="/asset/img/snow-img.png" alt="" class="footer__snow-1">
-            <img src="/asset/img/snow-img.png" alt="" class="footer__snow-2">
+            <img src="asset/img/snow-img.png" alt="" class="footer__snow-1">
+            <img src="asset/img/snow-img.png" alt="" class="footer__snow-2">
         </div>
     </footer>
 
